--- a/index.html
+++ b/index.html
@@ -13,11 +13,29 @@
     <!-- Develop our stuff here -->
     <div ng-controller='HomeController'>
       <h1>Welcome back {{ user.name }}</h1>
+
+      <ul class="button-group">
+        <button class="btn btn-primary" ng-click='getArticles("angularjs")'>Angular</button>
+        <button class="btn btn-primary" ng-click='getArticles("golang")'>Golang</button>
+      </ul>
+
+      <ul class ="button-group">
+        <button class ="btn btn-default"
+          ng-click='reverse = true'>^</button>
+        <button class ="btn btn-default"
+          ng-click='reverse = false'>v</button>
+      </ul>
+
+      <input
+        class='form-control'
+        type="search"
+        placeholder='Search'
+        ng-model='search'>
+
       <ul>
-          <li class='article' ng-repeat="article in articles">
+          <li class='article' ng-repeat="article in articles | filter:search | orderBy:'data.ups':true ">
             <h3> {{ article.data.title }}</h3>
             <span> {{ article.data.ups }} </span>
-            <span>Created at {{ article.data.created }} </span>
             <p><a ng-href="{{ article.data.url }}">{{ article.data.url }}</a></p>
           </li>
       </ul>
