--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <div ng-controller='HomeController'>
       <h1>Welcome back {{ user.name }}</h1>
 
-      <ul class="button-group">
+      <ul class="btn-group">
         <button class="btn btn-primary" ng-click='getArticles("angularjs")'>Angular</button>
         <button class="btn btn-primary" ng-click='getArticles("golang")'>Golang</button>
       </ul>
 
-      <ul class ="button-group">
+      <ul class ="btn-group">
         <button class ="btn btn-default"
           ng-click='reverse = true'>^</button>
         <button class ="btn btn-default"
@@ -31,6 +31,8 @@
         type="search"
         placeholder='Search'
         ng-model='search'>
+
+      <div ng-view></div>  
 
       <ul>
           <li class='article' ng-repeat="article in articles | filter:search | orderBy:'data.ups':true ">
