--- a/home.html
+++ b/home.html
@@ -1,1 +1,23 @@
-<h1>Hello {{user.name}} from the home route</h1>
+<a href="#/angularjs">Angular</a>
+<a href="#/funny">Funny</a>
+ 
+<ul class="btn-group">
+  <button class="btn btn-default" 
+    ng-click='reverse = true'>^</button>
+  <button class="btn btn-default" 
+    ng-click='reverse = false'>v</button>
+</ul>
+ 
+<input 
+  class='form-control'
+  type="search" 
+  placeholder='Search'
+  ng-model='search'>
+<ul>
+  <li class='article' 
+    ng-repeat="article in articles | filter:search | orderBy:'data.ups':reverse ">
+      <h3>{{ article.data.title }}</h3>
+      <span>{{ article.data.ups }}</span>
+      <p><a ng-href="{{ article.data.url }}">{{ article.data.url }}</a></p>
+  </li>
+</ul>
